--- a/event-processing.html
+++ b/event-processing.html
@@ -11,7 +11,7 @@
 
 <body>
 <header>
-	<h1>Idea Wall</h1>
+	<h1>IdeaWall</h1>
 <!--  	<p>A blog</p> -->
  	<nav>
  		<ul>
@@ -27,7 +27,9 @@
 
 <section>
 	<div id="boxcontent">
-		<h2>Events and Event Processing</h2>
+		<h2>Events and Event Processing
+		<p>Sunday, 10 April 2016</p>
+		</h2>
 	<p>Event is something that happens. We can think of an event as simple as taking a step 
 	or as complex as making a transaction, which involves - swipe, information going to payment 
 	gateway, verification involving authenticity, fraud and deducting the amount from your 
