--- a/event-processing.html
+++ b/event-processing.html
@@ -60,5 +60,14 @@ scale system. This is achieved by processing events in a distributed manner.</p>
 	
 	</div>
 <section>
+
+<footer>
+	<div id="footer">
+  <div id="copy">
+	  <p style="text-align:center;"> &copy; Copyright 2016, Mariamma Antony. All Rights Reserved.</p>
+		<!--   <p>Contact information: <a href="mailto:someone@example.com">  someone@example.com</a>.</p> -->
+	</div>
+  </div>
+</footer>
 </body>
 </html>
