--- a/index.html
+++ b/index.html
@@ -4,24 +4,242 @@
 <meta charset="utf-8">  
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>Stream of Thoughts</title>
+<meta name="description" content="The fundamental aspect of any event processing system is 
+	to capture and analyze events and to perform action accordingly. The concept of events
+	and event stream is explained in this article. Details on different 
+	types of event processing is included. This consists of realtime, near-realtime and batch
+	processing of events. Another event processing mechanism that is explained with importance
+	is simple event processing, event processing using state and complex event processing."/>
+<meta name="keywords" contents="Events, Event processing, simple events, complex events, event stream, state"/>
+<meta name="author" content="Mariamma Antony"/>
+<meta http-equiv="cache-control" content="max-age=0" />
+<meta http-equiv="cache-control" content="no-cache" />
+<meta http-equiv="pragma" content="no-cache" />
+<title>Events and Event Processing</title>
 <link rel="stylesheet" href="reset.css" type="text/css" media="screen" />
 <link rel="stylesheet" href="style.css" type="text/css" media="screen" />
 </head>
 
 <body>
 <header>
-	<h1>Stream of Thoughts</h1>
+	<h1>IdeaWall</h1>
 <!--  	<p>A blog</p> -->
  	<nav>
  		<ul>
- 			<li><a href="javascript:void(0)">Home</a></li>
- 			<li><a href="blogs.html">Blogs</a></li>
- 			<li><a href="javascript:void(0)">About</a></li>
- 			<li><a href="javascript:void(0)">Contact</a></li>
+ 			<!--  			<li><a href="blogs.html">Blogs</a></li> -->
+<!--  			<li><a href="contact.html">Contact</a></li> -->
+ 			<li><a href="about.html">About</a></li>
+ 			<li><a href="index.html">Home</a></li>
  		</ul>
  	</nav>
 </header>
 
+<section>
+	<div id="boxcontent">
+		<h2>Events and Event Processing
+		<p>Sunday, 08 May 2016</p>
+		</h2>
+	<p>The fundamental aspect of any event processing system is to capture and analyze events and to
+	perform action accordingly. Depending on the scale and complexity of the system, the 
+	system can capture events from multiple diverse sources. We can think of an event as one of the many 
+	things that happens around us, regardless of its duration or complexity. It can vary from
+	hitting a button in a webpage/website, a transaction carried 
+	out by swiping a credit card at any local store, to, sensor signals generated from electronic
+	devices in a modern car. In this article, we examine some of the core paradigms in the context of 
+	events and event processing in the  field of computer science.</p>	
+		
+	<p>An event is something that happens, which is of importance to the system. The importance 
+	of an event is related to its significance in the smooth operation of the system.
+	An event requires an action or a sequence of 
+	actions involving one or more entities in space. Entities are nothing, but systems that 
+	facilitates the events to happen.   An event 
+	can be as simple as taking a step while walking, watching a movie or your favourite 
+	TV show.  Consider the example, 
+	a person named Bob is watching a movie named “ABC” in a theatre named "XYZ". This 
+	event is facilitated by the entities namely, Bob and XYZ, and can be represented in simple terms as follows:</p>
+	
+	<div id="textline">
+	<p>Bob watching movie named “ABC” at “XYZ"</p>
+	</div>
+	
+	<p>An event can be expressed as an <i>event-log</i>. Event-log is a representation of an
+	event, in such a way that, it can be understood by some/any system. Inorder to keep track of the events, the 
+	sequence of event-logs are stored in a file known as an <i>event-file</i>. The event-logs in 
+	an event-file are ordered in the sequential order of their occurrence. In the above 
+	example of Bob watching a movie, the event-file might contain the following sequence of event-logs.</p>
+
+<p>
+<div id="textbox">
+<nav>
+<ul>
+ <li style="background-color:#e6e6e6;">getting ready</li>
+ <li style="background-color:#f2f2f2;">commuting to movie theatre</li>
+ <li style="background-color:#e6e6e6;">buying ticket</li>
+ <li style="background-color:#f2f2f2;">watching the movie</li>
+ <li style="background-color:#e6e6e6;">...</li>
+</ul>
+</nav>
+</div>
+</p>
+
+<p>It is possible that a single event-log in the event-file might involve a sequence of actions
+to be completed. An example of such an event is a transaction using a credit card to buy 
+some product, say, a movie ticket. This event involves - you presenting credit card as a payment mechanism to 
+merchant, merchant swipes the card which sends this information to a payment processor, 
+payment processor sends this information to credit card companies network, credit card 
+company routes information to issuer, such as a bank, for authorization and finally issuer 
+approving transaction after performing validations.</p>
+
+<figure>
+<img src="images/creditCardTrans10.png" alt="CreditCardTrans" style="height280;width:780;max-width:100%;"/>
+<figcaption style="text-align:center;font-size:14px;"><b>Credit card transaction authorization</b></figcaption>
+</figure>
+
+<p>It can be seen that, analogous to an object being made of a number of atoms, any event 
+can thought of to be composed of a number of granular/singular events, each with its own 
+properties. This implies that any event can be an abstraction over multiple events 
+happening in the system. Also, once we increase the level of detail associated with any 
+event, complexity increases. This is essentially because, once we go the finer details 
+associated with an event, more entities and data has to be 
+captured and analysed. In the example of a transaction event mentioned above, let us consider a granular 
+event such as authorization at the card-issuer end. One of the components of authorization 
+is checking for fraud. The act of detecting fraud in a transaction consists of 
+computation of variables involving complex mathematical functions as well as execution of 
+computation intensive algorithms. </p>
+
+<p>
+As seen above, the event of detecting fraud is one that involves analysis of historic/past
+ events as well as correlation with patterns to examine, if there is a potential of fraud 
+ involved with a transaction request. In this case, detection of fraud  is not a single event,
+ by itself, performed by some entity. However, it is derived from multiple events put together. Such an 
+ event which is derived from multiple events originating from same source or from multiple 
+ sources is known as a <i>complex event</i>. Events can be generated continuously in a 
+ system. Example of such an event stream is the transaction happening around the world that
+ are being routed to the payment gateway. The continuous sequence of events that are 
+ routed to a system is called <i>event stream</i>.</p>
+ </div>
+ </section>
+
+<section>
+<div id="boxcontent">
+<h2>Event Processing</h2>
+
+<p>The processing of events is an important aspect of realtime systems. This is mainly 
+attributed to the fact that there might be a potential of an opportunity or threat associated
+with an event. Hence, capturing and analyzing events as they arrive, enables a system to 
+respond to the events in a timely fashion. In the above example of 
+fraud determination, there are obvious benefits associated with identifying fraud in realtime.</p>
+
+<p>There are different flavours of event processing systems. One of the popular as well as 
+traditional classification of event processing system is real time vs batch systems.
+<i>Batch system</i> follows the principle of capturing the events at realtime and processing it later 
+at convenience. However, in <i>realtime systems</i>, the events are processed as they arrive the system,
+generating results within a latency of a few milli-seconds. In certain cases, if the processing of 
+events are delayed, either due to large number of events entering the system, in which case the system has
+to store the events in some buffer, or if the processing time itself is too large,
+then such systems are categorised as <i>near-realtime event processing systems</i>.
+</p>
+
+<figure style="margin-left:160px;">
+<img src="images/realtime-batch10.png" style="height:300;width:530;max-width:100%;"/>
+<figcaption style="text-align:center;font-size:14px;"><b>Processing time of event processing systems</b></figcaption>
+</figure>
+
+Another classification of event processing system is based on the complexity of the computations
+involving the events within the system. Computations on event data can vary from simple rules 
+to complex mathematical transformations inorder to derive insights. This is explained in the section
+below:
+
+	<ol class="custom-counter">
+		<li> <h3>Simple event processing</h3> 
+		<p>In simple event processing, a rule is executed on any event data. The
+		rule can be seen as the execution of a mathematical function on data associated 
+		with the event. Consider the following scenario, we need to build a system that will 
+		roll out offers, through communication channels such as email or sms, for 
+		transactions by a card if it meet certain criteria, say for example, all 
+		transactions in a particular country such as United States and belonging
+		to a specific category such as fashion and lifestyle, for an amount greater than $500. 
+		In this case, the compute module of the event processing system, as shown below, 
+		will execute the above rule on every transaction
+		event. It will then roll out the offer to the corresponding card member, whenever the criteria is met.</p>
+		<figure style="margin-left:100px;">
+			<img src="images/simple-event5.png" style="height:150;width:620;max-width:100%"/>
+			<figcaption style="margin-left:240px;font-size:14px;"><b>Simple event processing</b></figcaption>
+		</figure>
+		</li>
+		</li>
+		
+		<li><h3>Event processing using state</h3>
+		<p> In this case, the data associated with an event is 
+		processed along with the state of the system. The state of the system, is the value 
+		of a set of measurable properties/parameters, that are sufficient to determine other required 
+		properties/parameters. Usually, the state is stored in some memory store, such as a
+		database or a cache. Consider a system, that listens to a stream of transaction events. For 
+		the sake of simplicity, assume that a transaction event consists of card number, date and time of 
+		transaction and the total amount spent. The system is built to determine the average amount 
+		spent over a sliding window of 5 seconds. The state of this system keep track of the
+		the total amount seen so far, as well as the number of transactions, in the current window. 
+		</p>
+		<figure style="margin-left:100px;">
+			<img src="images/state-processing11.png" style="height:330;width:620;max-width:100%"/>
+			<figcaption style="margin-left:220px;font-size:14px;"><b>Event processing using state</b></figcaption>
+		</figure>
+		</li>
+		 
+		<li><h3>Complex event processing</h3> 
+		<p>A complex event processing system is an event processing system that determines complex
+		events as and when they occur. The state which consists of relevant events that had 
+		happened in the system, is an integral part of the processing system. In certain cases, 
+		it might also be required to keep 
+ 		track of patterns and other complex events to corelate different events, and to compute the complex event.
+			<!-- 
+As seen above, detection of a complex event such as a fraud, might pose 
+		an opportunity or threat to the system. And this provides significant benefits, if detected in
+		a timely fashion.
+ --> <!-- 
+The complex event processing system 
+		consists of events and actors. Actors are entities that perform action/operations on 
+		the incoming events with the help of the state of the system. Actors also route the incoming 
+		events to other actors for processing based on different parameters.
+ --> 
+ 		</p>
+		
+		<p>	As seen above, fraud is a complex event and is derived from analysis of events from 
+		single/multiple sources. Inorder to detect fraud, it is necessary to keep track of the
+		previous spend pattern of a card member as well as different fraud patterns.
+		Consider the case of a credit card holder who makes total transactions
+		within $5000 every month. However, if there is an event in which the card-holder 
+		is seeking approval for a transaction of $50,000,
+		then there might be a potential of fraud associated with it. This is because from the previous
+		events, the average spend of the card-holder per month is approximately $5000. </p>
+		
+		<figure style="margin-left:40px;">
+			<img src="images/complex-ep8.png" style="height:270;width:720;max-width:100%;"/>
+			<figcaption style="margin-left:250px;font-size:14px;"><b>Complex event processing</b></figcaption>
+		</figure>
+		 </li>
+	</ol>	
+
+
+	<p>	The processing of event stream is a challenge for any large scale system. 
+The challenges are mainly attributed to the fact that there are a large amount of data associated 
+with every event. The memory space required for  processing event stream
+might not fit into a single processing unit/ machine. In this scenario, events are processed 
+in a distributed manner, where, there is a cluster of processing units allocated for an event stream. 
+An event is routed to one of the processing units for computation and results are aggregated later if required.
+Distributed processing of events is a vast area which pose its own challenges and benefits.</p>
+
+
+</div>
+</section>
+
+<footer>
+	<div id="footer">
+  <div id="copy">
+	  <p style="text-align:center;"> &copy; Copyright 2016, Mariamma Antony. All Rights Reserved.</p>
+		<!--   <p>Contact information: <a href="mailto:someone@example.com">  someone@example.com</a>.</p> -->
+	</div>
+  </div>
+</footer>
 </body>
 </html>
