--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ company routes information to issuer, such as a bank, for authorization and fina
 approving transaction after performing validations.</p>
 
 <figure>
-<img src="images/creditCardTrans10.png" alt="CreditCardTrans" style="height280;width:780;max-width:100%;"/>
+<img src="images/creditCardTrans10.png" alt="CreditCardTrans" style="align:middle;max-width:100%;"/>
 <figcaption style="text-align:center;font-size:14px;"><b>Credit card transaction authorization</b></figcaption>
 </figure>
 
@@ -140,8 +140,8 @@ to store the events in some buffer, or if the processing time itself is too larg
 then such systems are categorised as <i>near-realtime event processing systems</i>.
 </p>
 
-<figure style="margin-left:160px;">
-<img src="images/realtime-batch10.png" style="height:300;width:530;max-width:100%;"/>
+<figure style="align:middle">
+<img src="images/realtime-batch10.png" style="margin:0 auto;display:block;height:70%;width:70%;max-width:100%;"/>
 <figcaption style="text-align:center;font-size:14px;"><b>Processing time of event processing systems</b></figcaption>
 </figure>
 
@@ -162,9 +162,9 @@ below:
 		In this case, the compute module of the event processing system, as shown below, 
 		will execute the above rule on every transaction
 		event. It will then roll out the offer to the corresponding card member, whenever the criteria is met.</p>
-		<figure style="margin-left:100px;">
-			<img src="images/simple-event5.png" style="height:150;width:620;max-width:100%"/>
-			<figcaption style="margin-left:240px;font-size:14px;"><b>Simple event processing</b></figcaption>
+		<figure style="align:middle">
+			<img src="images/simple-event5.png" style="margin:0 auto;display:block;height:75%;width:75%;max-width:100%"/>
+			<figcaption style="text-align:center;font-size:14px;"><b>Simple event processing</b></figcaption>
 		</figure>
 		</li>
 		</li>
@@ -180,9 +180,9 @@ below:
 		spent over a sliding window of 5 seconds. The state of this system keep track of the
 		the total amount seen so far, as well as the number of transactions, in the current window. 
 		</p>
-		<figure style="margin-left:100px;">
-			<img src="images/state-processing11.png" style="height:330;width:620;max-width:100%"/>
-			<figcaption style="margin-left:220px;font-size:14px;"><b>Event processing using state</b></figcaption>
+		<figure style="align:middle">
+			<img src="images/state-processing11.png" style="margin:0 auto;display:block;height:75%;width:75%;max-width:100%"/>
+			<figcaption style="text-align:center;font-size:14px;"><b>Event processing using state</b></figcaption>
 		</figure>
 		</li>
 		 
@@ -213,9 +213,9 @@ The complex event processing system
 		then there might be a potential of fraud associated with it. This is because from the previous
 		events, the average spend of the card-holder per month is approximately $5000. </p>
 		
-		<figure style="margin-left:40px;">
-			<img src="images/complex-ep8.png" style="height:270;width:720;max-width:100%;"/>
-			<figcaption style="margin-left:250px;font-size:14px;"><b>Complex event processing</b></figcaption>
+		<figure style="align:middle">
+			<img src="images/complex-ep8.png" style="margin:0 auto;display:block;height:78%;width:85%;max-width:100%;"/>
+			<figcaption style="text-align:center;font-size:14px;"><b>Complex event processing</b></figcaption>
 		</figure>
 		 </li>
 	</ol>	
