--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <title>Events and Event Processing</title>
 <link rel="stylesheet" href="reset.css" type="text/css" media="screen" />
 <link rel="stylesheet" href="style.css" type="text/css" media="screen" />
+<link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
 </head>
 
 <body>
@@ -235,10 +236,11 @@ Distributed processing of events is a vast area which pose its own challenges an
 
 <footer>
 	<div id="footer">
-  <div id="copy">
-	  <p style="text-align:center;"> &copy; Copyright 2016, Mariamma Antony. All Rights Reserved.</p>
+<!--   <div id="copy"> -->
+	  <!-- <p style="text-align:center;"> &copy; Copyright 2016, Mariamma Antony. All Rights Reserved.</p> -->
+	  <span style="position:relative; top:30%; transform: translateY(-30%);">&copy; Copyright 2016, Mariamma Antony. All Rights Reserved.</span>
 		<!--   <p>Contact information: <a href="mailto:someone@example.com">  someone@example.com</a>.</p> -->
-	</div>
+<!-- 	</div> -->
   </div>
 </footer>
 </body>
